# PluginReverbPAS

./: .gitignore  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Tap.cpp  Tap.h
Source/DSP/: FiltroPasaBajos.cpp  FiltroPasaBajos.h
Source/DSP/MultiTapDelay/: MultiTapDelay.cpp  MultiTapDelay.h  Tap.h
Source/GUI/: GraphEditor.cpp  GraphEditor.h  SliderNumTaps.cpp  SliderNumTaps.h  TableEditor.cpp  TableEditor.h
Source/Infr/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
buildeoyeah/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiPluginDELAY.sln  MiPluginDELAY.vcxproj  MiPluginDELAY.vcxproj.filters  MiPluginDELAY_All.vcxproj  MiPluginDELAY_VST3.vcxproj  MiPluginDELAY_VST3.vcxproj.filters  MiPluginDELAY_rc_lib.vcxproj  MiPluginDELAY_rc_lib.vcxproj.filters  MiPluginDELAY_vst3_helper.vcxproj  MiPluginDELAY_vst3_helper.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildeoyeah/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEExportConfig.cmake  cmake_install.cmake
buildeoyeah/JUCE/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildeoyeah/JUCE/tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEExportConfig.cmake  JUCEToolsExport.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildeoyeah/JUCE/tools/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildeoyeah/MiPluginDELAY.dir/Debug/MiPluginDELAY.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
buildeoyeah/MiPluginDELAY_VST3.dir/Debug/: MiPluginDELAY.vst3.recipe
buildeoyeah/MiPluginDELAY_VST3.dir/Debug/MiPlugin.E797310D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
buildeoyeah/MiPluginDELAY_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h  MiPluginDELAY_resources.rc
buildeoyeah/MiPluginDELAY_rc_lib.dir/Debug/: MiPluginDELAY_rc_lib.lib.recipe  MiPluginDELAY_rc_lib.vcxproj.FileListAbsolute.txt  MiPluginDELAY_resources.res
buildeoyeah/MiPluginDELAY_vst3_helper.dir/Debug/: MiPluginDELAY_vst3_helper.exe.recipe
(+38 files in other folders)
